--- a/powerbi-docs/transform-model/TOC.yml
+++ b/powerbi-docs/transform-model/TOC.yml
@@ -81,6 +81,8 @@
           items:
             - name: Criar e usar fluxos de dados
               href: ../service-dataflows-create-use.md
+            - name: Promover ou certificar fluxos de dados
+              href: service-dataflows-promote-certify.md
             - name: Usar o mecanismo de computação aprimorado com fluxos de dados
               href: ../service-dataflows-enhanced-compute-engine.md
             - name: Entidades computadas com o Power BI Premium
