commit translated contents

--- a/powerbi-docs/breadcrumb/toc.yml
+++ b/powerbi-docs/breadcrumb/toc.yml
@@ -29,9 +29,12 @@
                 - name: Automação
                   tocHref: /power-bi/developer/automation/
                   topicHref: /power-bi/developer/automation/
-            - name: Aprendizagem Guiada
+            - name: Aprendizagem orientada
               tocHref: /power-bi/guided-learning/
               topicHref: /power-bi/guided-learning/
+            - name: Catálogo de aprendizagem
+              tocHref: /power-bi/learning-catalog/
+              topicHref: /power-bi/learning-catalog/index
             - name: Servidor de Relatórios
               tocHref: /power-bi/report-server/
               topicHref: /power-bi/report-server/index
