--- a/powerbi-docs/guided-learning/TOC.yml
+++ b/powerbi-docs/guided-learning/TOC.yml
@@ -12,7 +12,5 @@
   href: 'https://docs.microsoft.com/learn/modules/visuals-in-power-bi'
 - name: Explorar dados
   href: 'https://docs.microsoft.com/learn/modules/explore-data-power-bi'
-- name: Publique e compartilhe
+- name: Publicar e compartilhar
   href: 'https://docs.microsoft.com/learn/modules/publish-share-power-bi'
-- name: Introdução ao DAX
-  href: introductiontodax.yml?tutorial-step=1
