--- a/powerbi-docs/index.yml
+++ b/powerbi-docs/index.yml
@@ -13,12 +13,12 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 03/31/2020
-  ms.openlocfilehash: ac6ecb181cd5b06e54ab611976532638d43359f6
-  ms.sourcegitcommit: 9ecd7cadb9ff47f0fc0e400730777cc4dadbd80d
+  ms.openlocfilehash: 0ad39302737284ecbde50a8810b740d68706c809
+  ms.sourcegitcommit: b2cb0b02bdc451bf11a92a68f2c4d560a811f563
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 04/01/2020
-  ms.locfileid: "80487697"
+  ms.lasthandoff: 04/16/2020
+  ms.locfileid: "81439379"
 highlightedContent:
   items:
   - title: Criar um relatório sobre a COVID-19 com os dados dos EUA
@@ -217,19 +217,19 @@ conceptualContent:
     footerLink:
       url: guidance/index.yml
       text: Veja mais
-  - title: Aprender
+  - title: Catálogo de aprendizagem
     links:
-    - url: https://docs.microsoft.com/learn/modules/explore-power-bi-service/
+    - url: learning-catalog/learning-catalog-bdm.md
       itemType: learn
-      text: Explorar o que o Power BI pode fazer por você
-    - url: https://docs.microsoft.com/learn/modules/analyze-data-power-bi/
+      text: Tomadores de decisão de negócios
+    - url: guided-learning/introductiontodax.yml?tutorial-step=1
       itemType: learn
-      text: Analisar dados
-    - url: https://docs.microsoft.com/learn/modules/get-started-with-power-bi/
+      text: Introdução ao DAX
+    - url: learning-catalog/learning-catalog-solution-architect.md
       itemType: learn
-      text: Comece a criar com o Power BI
+      text: Arquitetos de solução
     footerLink:
-      url: guided-learning/index.yml
+      url: learning-catalog/index.yml
       text: Veja mais
 additionalContent:
   sections:
