--- a/powerbi-docs/guidance/index.yml
+++ b/powerbi-docs/guidance/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 01/14/2020
-  ms.openlocfilehash: a4466f3ce963891d03ca48dc99767eec6670872f
-  ms.sourcegitcommit: b2cb0b02bdc451bf11a92a68f2c4d560a811f563
+  ms.openlocfilehash: eecccb15eb48e922fd6b29e703a2bc4f298caa6e
+  ms.sourcegitcommit: 5ece366fceee9832724dae40eacf8755e1d85b04
   ms.translationtype: HT
   ms.contentlocale: pt-BR
   ms.lasthandoff: 04/16/2020
-  ms.locfileid: "81439746"
+  ms.locfileid: "81525343"
 landingContent:
 - title: Diretrizes do Power BI
   linkLists:
@@ -135,3 +135,5 @@ landingContent:
       url: gateway-onprem-sizing.md
     - text: Monitorar o desempenho do relatório
       url: monitor-report-performance.md
+    - text: Solucionar problemas de desempenho de relatório
+      url: report-performance-troubleshoot.md
