--- a/powerbi-docs/connect-data/TOC.yml
+++ b/powerbi-docs/connect-data/TOC.yml
@@ -270,6 +270,8 @@
               href: ../service-connect-to-project-online.md
             - name: QuickBooks Online
               href: ../service-connect-to-quickbooks-online.md
+            - name: Dashboard de resposta a emergências regionais
+              href: service-connect-to-regional-emergency-response.md
             - name: Salesforce
               href: ../service-connect-to-salesforce.md
             - name: Smartsheet
