--- a/powerbi-docs/create-reports/TOC.yml
+++ b/powerbi-docs/create-reports/TOC.yml
@@ -327,6 +327,10 @@
               href: ../paginated-reports/report-builder-shared-datasets.md
             - name: Criar parâmetros
               href: ../paginated-reports/paginated-reports-parameters.md
+            - name: Sub-relatórios
+              href: ../paginated-reports/subreports.md
+            - name: Solucionar problemas de sub-relatórios
+              href: ../paginated-reports/subreports-troubleshoot.md
             - name: Pass a report parameter in a URL (Aprovar um parâmetro de relatório em uma URL)
               href: ../paginated-reports/report-builder-url-pass-parameters.md
             - name: Publicar um relatório paginado
