--- a/powerbi-docs/admin/index.yml
+++ b/powerbi-docs/admin/index.yml
@@ -13,10 +13,10 @@ metadata:
   ms.author: maggies
   ms.date: 03/17/2020
   ms.openlocfilehash: 12bd1e2ac706925301ca139bd84cef249c71e18c
-  ms.sourcegitcommit: a175faed9378a7d040a08ced3e46e54503334c07
+  ms.sourcegitcommit: 7aa0136f93f88516f97ddd8031ccac5d07863b92
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 03/18/2020
+  ms.lasthandoff: 05/05/2020
   ms.locfileid: "79488466"
 landingContent:
 - title: Power BI para administradores e empresas
@@ -61,7 +61,7 @@ landingContent:
       url: ../service-admin-access-usage.md
     - text: Auditar o Power BI
       url: ../service-admin-auditing.md
-    - text: Monitorar a integridade do serviço
+    - text: Controlar a integridade do serviço
       url: ../service-admin-health.md
     - text: Fechamento da sua conta do Power BI
       url: ../service-admin-closing-your-account.md
