--- a/powerbi-docs/breadcrumb/toc.yml
+++ b/powerbi-docs/breadcrumb/toc.yml
@@ -29,16 +29,16 @@
                 - name: Automação
                   tocHref: /power-bi/developer/automation/
                   topicHref: /power-bi/developer/automation/
-            - name: Aprendizagem orientada
+            - name: Aprendizagem Guiada
               tocHref: /power-bi/guided-learning/
               topicHref: /power-bi/guided-learning/
             - name: Catálogo de aprendizagem
               tocHref: /power-bi/learning-catalog/
               topicHref: /power-bi/learning-catalog/index
-            - name: Servidor de Relatórios
+            - name: Servidor de relatório
               tocHref: /power-bi/report-server/
               topicHref: /power-bi/report-server/index
-            - name: Diretrizes
+            - name: Orientação
               tocHref: /power-bi/guidance/
               topicHref: /power-bi/guidance/index
             - name: 'Colaboração, compartilhamento e integração'
@@ -47,7 +47,7 @@
             - name: Criar relatórios e dashboards
               tocHref: /power-bi/create-reports/
               topicHref: /power-bi/create-reports/index
-            - name: Conectar aos dados
+            - name: Conectar-se a dados
               tocHref: /power-bi/connect-data/
               topicHref: /power-bi/connect-data/index
             - name: Introdução
