--- a/powerbi-docs/developer/index.yml
+++ b/powerbi-docs/developer/index.yml
@@ -14,14 +14,14 @@ metadata:
   ms.author: kesharab
   ms.date: 31/03/2020
   ms.openlocfilehash: 8d37f5a4cde341dd8788791fecdbd1c7f20249d0
-  ms.sourcegitcommit: 9ecd7cadb9ff47f0fc0e400730777cc4dadbd80d
+  ms.sourcegitcommit: 7aa0136f93f88516f97ddd8031ccac5d07863b92
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 04/01/2020
+  ms.lasthandoff: 05/05/2020
   ms.locfileid: "80487804"
 highlightedContent:
   items:
-  - title: Análise integrada com o Power BI
+  - title: Análise de Texto com o Power BI
     itemType: overview
     url: embedded/embedding.md
   - title: O que é o Power BI Embedded no Azure?
@@ -39,7 +39,7 @@ conceptualContent:
     links:
     - url: embedded/embedding.md
       itemType: overview
-      text: Análise integrada com o Power BI
+      text: Análise de Texto com o Power BI
     - url: embedded/azure-pbie-what-is-power-bi-embedded.md
       itemType: overview
       text: O que é o Power BI Embedded no Azure?
@@ -48,7 +48,7 @@ conceptualContent:
       text: Capacidade e SKUs
     footerLink:
       url: embedded/index.yml
-      text: Veja mais
+      text: Ver mais
   - title: Visuais do Power BI
     links:
     - url: visuals/power-bi-custom-visuals.md
@@ -62,7 +62,7 @@ conceptualContent:
       text: Publicar visuais do Power BI no Partner Center
     footerLink:
       url: visuals/index.yml
-      text: Veja mais
+      text: Ver mais
   - title: Automação
     links:
     - url: automation/overview-of-power-bi-rest-api.md
@@ -76,7 +76,7 @@ conceptualContent:
       text: Configurar credenciais
     footerLink:
       url: automation/index.yml
-      text: Veja mais
+      text: Ver mais
 additionalContent:
   sections:
   - title: Ferramentas relacionadas
