commit translated contents

--- a/powerbi-docs/learning-catalog/index.yml
+++ b/powerbi-docs/learning-catalog/index.yml
@@ -10,10 +10,10 @@ metadata:
   ms.author: v-lshann
   ms.date: 04/08/2020
   ms.openlocfilehash: 9f03f812eb20454f655a876438312ba50b521a29
-  ms.sourcegitcommit: b2cb0b02bdc451bf11a92a68f2c4d560a811f563
+  ms.sourcegitcommit: 7aa0136f93f88516f97ddd8031ccac5d07863b92
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 04/16/2020
+  ms.lasthandoff: 05/05/2020
   ms.locfileid: "81439286"
 landingContent:
 - title: Tomadores de decisão de negócios
@@ -36,9 +36,9 @@ landingContent:
       url: learning-catalog-report-creator.md#
     - text: Introdução
       url: learning-catalog-report-creator.md#get-started
-    - text: Dashboards
+    - text: Painéis
       url: learning-catalog-report-creator.md#dashboards
-    - text: Design de relatório
+    - text: Design de relatórios
       url: learning-catalog-report-creator.md#report-design
     - text: Visualização
       url: learning-catalog-report-creator.md#visualization
@@ -56,7 +56,7 @@ landingContent:
       url: learning-catalog-data-analyst.md#best-practices
     - text: Estudos de caso
       url: learning-catalog-data-analyst.md#case-studies
-    - text: Dashboards
+    - text: Painéis
       url: learning-catalog-data-analyst.md#dashboards
     - text: Visualizações
       url: learning-catalog-data-analyst.md#visualizations
@@ -84,7 +84,7 @@ landingContent:
       url: learning-catalog-developer.md
     - text: Introdução
       url: learning-catalog-developer.md#get-started
-    - text: Inserido
+    - text: Inserida
       url: learning-catalog-developer.md#embedded
     - text: DAX
       url: learning-catalog-developer.md#dax
@@ -108,7 +108,7 @@ landingContent:
       url: learning-catalog-functional-consultant.md#best-practices
     - text: Estudos de caso
       url: learning-catalog-functional-consultant.md#case-studies
-    - text: Dashboards
+    - text: Painéis
       url: learning-catalog-functional-consultant.md#dashboards
     - text: Governança e implantação
       url: learning-catalog-functional-consultant.md#governance-deployment
